--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "errorhandler": "^1.4.2",
     "compression": "^1.5.2",
     "composable-middleware": "^0.3.0",
-    "lodash": "^3.10.1",
+    "lodash": "^3.0.0",
     "lusca": "^1.3.0",
     "babel-runtime": "^5.8.20",
     "ejs": "^2.3.3",
@@ -29,7 +29,7 @@
     "socket.io": "^1.3.5",
     "socket.io-client": "^1.3.5",
     "socketio-jwt": "^4.2.0",
-    "serve-favicon": "^2.3.0"
+    "serve-favicon": "~2.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.0.0",
